--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -13,4 +13,9 @@
         android:layout_height="wrap_content"
         android:text="@string/logout" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
 </LinearLayout>
